# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata

[project]
name = "avbutils"
description = "Lovingly calculate TRT without doing much"
authors = [{name = "Michael Jordan", email = "michael@glowingpixel.com"}]

version = "0.0a1"

readme = "README.md"
license = {file = "LICENSE"}

dependencies = ["pyavb","timecode@git+https://github.com/mjiggidy/timecode.git#egg=timecode"]

[tool.setuptools.packages.find]
include = ["avbutils"]

# https://stackoverflow.com/questions/69647590/specifying-package-data-in-pyproject-toml
#[tool.setuptools.packages.find]
#where = ["avbutils"]